# MapArtist

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CPPLINT.cfg  README.md  cmake-variants.yaml  index.html  sitemap.xml
.github/: dependabot.yml
.github/workflow/: github-cicd.yml
.github/workflows/: ci.yaml  deploy-web.yaml  github-build.yml  github-cicd.yml  github-release.yml  main.yml
changelog/: index.html
cmake/: botcraft.cmake  dpp.cmake  openssl.cmake  pathfinding.cmake  tomlplusplus.cmake  zlib.cmake
command/: index.html
faq/: index.html
install/: index.html
src/: Algorithm.cpp  Algorithm.hpp  Artist.cpp  Artist.hpp  Bot.cpp  Bot.hpp  BotCommands.cpp  BotCommands.hpp  ConfigParser.cpp  ConfigParser.hpp  Constants.hpp  CustomBehaviorTree.hpp  CustomSubTree.cpp  CustomSubTree.hpp  CustomTask.cpp  CustomTask.hpp  Discord.cpp  Discord.hpp  Notifier.cpp  Notifier.hpp  PathFinding.cpp  PathFinding.hpp  Regex.hpp  Utils.cpp  Utils.hpp  main.cpp
src/DS/: Octree.hpp  Point3D.hpp
usage/: index.html
web/: README.md  mkdocs.yml  requirements.txt
web/docs/: changelog.zh-TW.md  command.en.md  command.zh-TW.md  faq.en.md  faq.zh-TW.md  index.en.md  index.zh-TW.md  install.en.md  install.zh-TW.md  usage.en.md  usage.zh-TW.md
web/overrides/partials/integrations/analytics/: custom.html
world/: level.dat_old
world/advancements/: cdb1b125-4222-3a49-8623-98f1025d158d.json
world/entities/: r.-1.-1.mca  r.0.-1.mca  r.0.0.mca
world/playerdata/: cdb1b125-4222-3a49-8623-98f1025d158d.dat_old
world/poi/: r.-1.-1.mca
world/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
world/stats/: cdb1b125-4222-3a49-8623-98f1025d158d.json
zh-TW/: index.html
zh-TW/changelog/: index.html
zh-TW/command/: index.html
zh-TW/faq/: index.html
zh-TW/install/: index.html
zh-TW/usage/: index.html
